--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-fastapi
+fastapi~=0.115.8
 uvicorn
-celery
+celery~=5.4.0
 redis
 httpx
-pydantic
-transliterate
-fuzzywuzzy
+pydantic~=2.10.6
+transliterate~=1.10.2
+fuzzywuzzy~=0.18.0
 python-Levenshtein
-requests
+requests~=2.32.3
 langdetect
-loguru
+loguru~=0.7.3
+python-dotenv~=1.0.1
